<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/map"
        android:title="Map"
        android:icon="@drawable/baseline_map_24" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24" />


</menu>