<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReserveHistoryFragment">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_marginBottom = "10dp">

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="30dp"
            android:text="Reservation History"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TableRow android:background="#A5C3E1"
            android:padding="5dp"
            android:orientation="vertical"
            android:id="@+id/upcoming_r1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:text="Upcoming Reservation"
                android:textStyle="bold"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#DCE5EE"
                android:textColor="@color/black"
                android:text="Cancel" />


        </TableRow>
        <TableRow
            android:id="@+id/past"
            android:background="#929BA6"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Date"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="Building"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="4dp"/>


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Start"
                android:textStyle="bold"
                android:textSize="15dp"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="End"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="15dp"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Room"
                android:textSize="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="4dp"/>


        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingReservation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EFF3F9"/>

        <TableRow
            android:id="@+id/past_r1"
            android:background="#5F6A74"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:text="Past Reservations"
                android:textColor="@color/white"/>
        </TableRow>

        <TableRow
            android:id="@+id/past_r2"
            android:background="#929BA6"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Date"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Building"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Room"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Start"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="End"
                android:gravity="center"
                android:padding="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Cancel"
                android:gravity="center"
                android:padding="4dp"/>


        </TableRow>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pastInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EFF3F9"/>


    </TableLayout>

</ScrollView>