...
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/reserveHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="Reservation History"
            android:layout_marginTop="20dp"
...
